--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ body {
   font-size: 16px;
   font-weight: bold;
   color: #a5a5ff;
-  // background-color: #a5a5ff;
+  background-color: #a5a5ff;
   // -webkit-animation: fadeInOut 60s infinite;
 }
 /* unvisited link */
